# pierre

./: .clang-format  .gcc-flags.json  .gitignore  CMakeLists.txt  README.md  _clang-format  pierre-build.sh
src/: CMakeLists.txt  audiotx.cpp
src/___airplay/: CMakeLists.txt  activity_monitor.c  alac.c  audio_alsa.c  common.c  mdns.c  pair_fruit.c  player.c  ptp-utilities.c  ref.c  rtp.c  rtsp.c
src/airplay/: CMakeLists.txt  aes_ctx.cpp  airplay.cpp  audio_dummy.c  content.cpp  controller.cpp  headers.cpp  mdns_avahi.c  player.c  ref.c  resp_code.cpp  rtp.c  rtp.cpp  rtsp.c  rtsp.cpp  shairport.c
src/airplay/aes/: CMakeLists.txt  aes_ctx.cpp
src/airplay/anchor/: anchor.cpp  net_time.cpp
src/airplay/aplist/: aplist.cpp
src/airplay/clock/: clock.cpp  info.cpp
src/airplay/common/: anchor.cpp  conn_info.cpp  net_time.cpp  stream.cpp  stream_info.cpp
src/airplay/conn_info/: conn_info.cpp  stream.cpp  stream_info.cpp
src/airplay/embed/: embed.cpp
src/airplay/ple/: CMakeLists.txt  embed.cpp  get_info_resp.plist  ple.cpp
src/airplay/plist_ref/: set_anchor.xml
src/airplay/reply/: cmd.cpp  factory.cpp  fairplay.cpp  feedback.cpp  flush.cpp  info.cpp  options.cpp  pairing.cpp  parameter.cpp  record.cpp  reply.cpp  set_anchor.cpp  set_peers.cpp  set_peersx.cpp  setup.cpp  teardown.cpp  unhandled.cpp
src/airplay/rtsp/: audio.cpp  ctx.cpp  reply.cpp  request.cpp  session.cpp
src/airplay/server/: audio.cpp  control.cpp  event.cpp  map.cpp  rtsp.cpp  servers.cpp
src/airplay/session/: audio.cpp  base.cpp  event.cpp  rtsp.cpp
src/anchor/: CMakeLists.txt  anchor.cpp  client.cpp  clock.cpp
src/anchor/time/: net.cpp
src/audio/: CMakeLists.txt  audiotx.cpp  dsp.cpp  fft.cpp  net.cpp  pcm.cpp  peaks.cpp
src/base/: CMakeLists.txt  anchor_data.cpp  aplist.cpp  clock_info.cpp  color.cpp  content.cpp  dura.cpp  elapsed.cpp  headers.cpp  host.cpp  io.cpp  log.cpp  logger.cpp  pet.cpp  random.cpp  ref_clock.cpp  render.cpp  resp_code.cpp  shk.cpp  stats.cpp  thread_util.cpp  threads.cpp  uint8v.cpp
src/base/aes/: ctx.cpp
src/base/conf/: cli_args.cpp  fixed.cpp  getv.cpp  master.cpp  token.cpp  watch.cpp
src/base/config/: token.cpp
src/base/pair/: CMakeLists.txt  pair.c
src/cals/: CMakeLists.txt  config.cpp  logger.cpp  stats.cpp
src/cli/: cli.cpp  linenoise.c
src/cli/subcmds/: dsp.cpp  lightdesk.cpp
src/config/: CMakeLists.txt  args.cpp  config.cpp
src/config/embed/: embed.cpp
src/config/fallback/: CMakeLists.txt  cfg_fallback.cpp  cfg_fallback.json  fallback.cpp  fallback.json
src/config2/: CMakeLists.txt  config2.cpp
src/core/: CMakeLists.txt  args.cpp  common.cpp  config.cpp  features.cpp  host.cpp  service.cpp  state.cpp  static.cpp  status_flags.cpp
src/core/pair/: pair_fruit.c  pair_homekit.c
src/decouple/: CMakeLists.txt  conn_info.cpp  stream_info.cpp
src/desk/: CMakeLists.txt  color.cpp  ctrl.cpp  data_msg.cpp  desk.cpp  dmx.cpp  dmx_ctrl.cpp  dmx_data_msg.cpp  msg.cpp  units.cpp
src/desk/color/: hsb.cpp
src/desk/fader/: easings.cpp  fader.cpp
src/desk/fx/: colorbars.cpp  fx.cpp  leave.cpp  majorpeak.cpp  names.cpp  silence.cpp  standby.cpp
src/desk/session/: ctrl.cpp  data.cpp
src/desk/stats/: stats.cpp
src/desk/unit/: names.cpp  pinspot.cpp
src/dmx/: CMakeLists.txt  net.cpp  packet.cpp  render.cpp
src/dsp/: CMakeLists.txt  fft.cpp  peaks.cpp
src/fader/: CMakeLists.txt  easings.cpp  fader.cpp
src/frame/: CMakeLists.txt  anchor.cpp  anchor_data.cpp  anchor_last.cpp  av.cpp  clock_info.cpp  dsp.cpp  fft.cpp  fft2.cpp  flush_info.cpp  flusher.cpp  frame.cpp  master_clock.cpp  peak.cpp  peaks.cpp  peaks_old.cpp  racked.cpp  reel.cpp  silent_frame.cpp  silent_reel.cpp  spooler.cpp  state.cpp
src/frame/peaks/: peak.cpp  peak_config.cpp
src/frame/stats/: stats.cpp
src/headunit/: CMakeLists.txt  desk.cpp  pinspot.cpp  tracker.cpp
src/io/: CMakeLists.txt  io.cpp  log_socket.cpp  msg.cpp
src/lcs/: CMakeLists.txt  args.cpp  config.cpp  config_watch.cpp  lcs.cpp  logger.cpp  stats.cpp
src/lcs/config/: token.cpp  watch.cpp
src/legacy/: audiotx.cpp
src/lightdesk/: CMakeLists.txt  color.cpp  control.cpp  dmx.cpp  fader.cpp  lightdesk.cpp  statics.cpp  types.cpp
src/lightdesk/faders/: easings.cpp  fader.cpp
src/lightdesk/fx/: fx.cpp  leave.cpp  majorpeak.cpp
src/lightdesk/headunits/: pinspot.cpp
src/logger/: CMakeLists.txt
src/mdns/: CMakeLists.txt  callbacks.cpp  features.cpp  mdns.cpp  mdns_ctx.cpp  provider.cpp  service.cpp  zservice.cpp
src/mdns/pair/: pair.c  pair_homekit.c
src/mdns/service/: airplay.cpp  raop.cpp  static_data.cpp
src/misc/: CMakeLists.txt  FFT.cpp  elapsed.cpp  random.cpp
src/nptp/: CMakeLists.txt  clock_info.cpp  nptp.cpp
src/packet/: CMakeLists.txt  aplist.cpp  content.cpp  dmx.cpp  headers.cpp  queued.cpp  resp_code.cpp  rtp.cpp
src/packet/plist_embed/: CMakeLists.txt  embed.cpp
src/packet/plist_ref/: command2.xml  flush_buffered.xml  set_peers.xml  setup_channel_control.xml  setup_no_streams_b59.xml  teardown_stream.xml
src/packet/rfc3550/: hdr.cpp  trl.cpp
src/packet/rtcp/: packet.cpp
src/pair/: CMakeLists.txt  pair-tlv.c
src/pcm/: CMakeLists.txt  buffer.cpp  pcm.cpp  rfc3550.cpp
src/player/: CMakeLists.txt  fft.cpp  frame.cpp  frames_request.cpp  peaks.cpp  player.cpp  queued.cpp  reel.cpp  render.cpp  rtp.cpp  spool.cpp  spooler.cpp
src/player/dmx/: packet.cpp  render.cpp
src/player/lightdesk/: CMakeLists.txt  lightdesk.cpp
src/rtp/: CMakeLists.txt  anchor_info.cpp  buffered.cpp  conn_info.cpp  control.cpp  event.cpp  rtp.cpp  servers.cpp  stream_info.cpp
src/rtp/control/: datagram.cpp
src/rtp/event/: receiver.cpp  server.cpp  session.cpp
src/rtp_time/: CMakeLists.txt  anchor.cpp  clock.cpp  clock_info.cpp  master_clock.cpp
src/rtsp/: CMakeLists.txt  aes.cpp  aes_ctx.cpp  aplist.cpp  audio.cpp  content.cpp  ctx.cpp  headers.cpp  nptp.cpp  reply.cpp  request.cpp  resp_code.cpp  rtsp.cpp  saver.cpp  server.cpp  session.cpp  sessions.cpp
src/spooler/: CMakeLists.txt  reel.cpp  spooler.cpp
src/stats/: CMakeLists.txt  stats.cpp
(+705 files in other folders)
